second_ec2.tf
provider aws{
    region = "us-east-1"
}

resource "aws_instance" "my-ec2"{
    
}
